--- a/templates/base.html
+++ b/templates/base.html
@@ -47,29 +47,39 @@
     <div class="footer">
         <p>zens.top &copy; 2017 | MIT Licensed</p>
         <p>Built by Kendrick Tan - <a href="https://github.com/kendricktan/zenstop">source code</a> </p>
-        </footer>
+    </div>
 
-        <script>
-            // Search functionality
-            function search() {
-                var q = document.getElementById('search-query').value;
-                q = q.replace('/', '')
+    <script>
+        // Search functionality
+        function search() {
+            var q = document.getElementById('search-query').value;
+            q = q.replace('/', '')
 
-                if (q.startsWith('00000')) {
-                    window.location = '/block/' + q;
-                }
-                else {
-                    window.location = '/tx/' + q;
-                }
+            if (q.startsWith('00000')) {
+                window.location = '/block/' + q;
             }
-
-            // Hit enter
-            document.getElementById('search-query').onkeypress = function (e) {
-                if (e.keyCode == 13) {
-                    document.getElementById('search-button').click();
-                }
+            else {
+                window.location = '/tx/' + q;
             }
-        </script>
+        }
+
+        // Hit enter
+        document.getElementById('search-query').onkeypress = function (e) {
+            if (e.keyCode == 13) {
+                document.getElementById('search-button').click();
+            }
+        }
+
+		// Google analytics
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+		ga('create', 'UA-71060764-9', 'auto');
+		ga('send', 'pageview');
+	</script>
+
 </body>
 
 </html>
